--- a/src/partials/picturesearch.html
+++ b/src/partials/picturesearch.html
@@ -7,3 +7,9 @@
   />
   <button type="submit">Search</button>
 </form>
+<div class="container">
+  <div class="gallery"></div>
+</div>
+<div class="load-more_wrapper">
+  <button type="button" class="load-more hidden">Load more</button>
+</div>
