--- a/src/sass/_searchform.scss
+++ b/src/sass/_searchform.scss
@@ -76,3 +76,12 @@ img {
 
   margin-bottom: 200px;
 }
+
+.search-form {
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-bottom: 10px;
+
+  border-bottom: 3px solid #f6f6f6;
+}
