--- a/src/partials/picturesearch.html
+++ b/src/partials/picturesearch.html
@@ -11,5 +11,5 @@
   <div class="gallery"></div>
 </div>
 <div class="load-more_wrapper">
-  <button type="button" class="load-more hidden">Load more</button>
+  <button type="button" class="load-more">Load more</button>
 </div>
